--- a/football.html
+++ b/football.html
@@ -1,5 +1,4 @@
-<<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +56,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Sports World</p>
+        <p> MADE BY: BIKRAMJOT SINGH RANYAL </p>
     </footer>
 </body>
 </html>
