--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <ul>
             <li><strong>FIFA World Cup 2026</strong> - The biggest football tournament will be hosted by the USA, Canada, and Mexico, featuring 48 teams competing for the global title.</li>
             <li><strong>NBA 2024-2025 Season</strong> - Get ready for another thrilling NBA season with top teams like the Lakers, Warriors, and Bucks battling for the championship.</li>
-            <li><strong>Olympics 2024</strong> - The Summer Olympics are set to take place in Paris, France, showcasing the world's best athletes across various sports, including football and basketball.</li>
+            <li><strong>Olympics 2028 or LA28</strong> - The 2028 Summer Olympics are set to take place in Los Angeles, California, showcasing the world's best athletes across various sports, including football and basketball.</li>
         </ul>
 
         <h3>Featured Athletes</h3>
