--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <section>
         <h2>Get in Touch</h2>
-        <p>If you have any questions or feedback, feel free to reach out to us.</p>
+        <p>If you have any questions or feedback, feel free to reach out to us. We'll be happy to respond back to you in due course of time. Thank you for choosing THE SPORTS ODYSSEY as your travel guide through 2 of the most popular sports in the world.</p>
         <form>
             <label for="name">Name:</label><br>
             <input type="text" id="name" name="name"><br><br>
