--- a/football.html
+++ b/football.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Football</h1>
+        <h1>THE FOOTBALL </h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -48,7 +48,7 @@
 
         <h3>Did You Know?</h3>
         <ul>
-            <li>The fastest goal in football history was scored by Hakan for Turkey in the 2002 World Cup, just 11 seconds into the match.</li>
+            <li>The fastest goal in football history was scored by Hakan Sukur for Turkey in the 2002 World Cup, just 11 seconds into the match.</li>
             <li>The largest football stadium in the world is the Rungrado 1st of May Stadium in Pyongyang, North Korea, with a capacity of 114,000.</li>
             <li>Football is played by over 250 million players in over 200 countries, making it the world's most popular sport.</li>
             <br><br><br>
