--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Sports World</h1>
+        <h1>THE SPORTS ODYSSEY </h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,7 +22,7 @@
         <h2>Explore the Latest in Sports</h2>
         <img src="highlights.jfif" alt="Sports Highlights" style="width:50%; height:auto;display: block; margin-left: auto; margin-right: auto;">
 
-        <p>At Sports World, we bring you the most exciting updates from the world of football, basketball, and beyond. From the thrilling action of the Premier League and NBA to international competitions like the FIFA World Cup, our goal is to keep you informed and entertained with the latest in the sports world.</p>
+        <p>At Sports World, we bring you the most exciting updates from the world of Football & Basketball. From the thrilling action of the Premier League and NBA to international competitions like the FIFA World Cup, our goal is to keep you informed and entertained with the latest in the sports world.</p>
 
         <h3>Top Sports Categories</h3>
         <div class="sports-categories">
@@ -52,7 +52,7 @@
             <div class="athlete">
                 <img src="messi 2.jpg" alt="Lionel Messi" style="width:50%; height:auto;display: block; margin-left: auto; margin-right: auto;">
                 <h4>Lionel Messi</h4>
-                <p>Arguably the greatest footballer of all time, Messi continues to shine on the global stage with his incredible talent and leadership, recently winning the World Cup with Argentina in 2022.</p>
+                <p>Arguably the greatest footballer of all time,Lionel Messi continues to shine on the global stage with his incredible talent and leadership, recently winning two Copa America titles with Argentina in 2021 and 2024. He also won the Grandest Title in Football, The World Cup with Argentina in 2022.</p>
             </div>
 
             
@@ -76,4 +76,4 @@
         <p> MADE BY: BIKRAMJOT SINGH RANYAL</p>
     </footer>
     </body>
-    </html>
+</html>
