--- a/basketball.html
+++ b/basketball.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Basketball</h1>
+        <h1>THE BASKETBALL EXPEDITION</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
