--- a/football.html
+++ b/football.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>THE FOOTBALL </h1>
+        <h1>THE FOOTBALL QUEST</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
